--- a/server/static/style.css
+++ b/server/static/style.css
@@ -87,6 +87,8 @@ button, img{
 	user-select: none;
 }
 
+
+
 .btn{
     border-radius: 10px;
     background: linear-gradient(bisque, rgb(95, 67, 33) );
@@ -183,30 +185,113 @@ main{
 }
 
 .add_to_basket{
-  position: relative;
-  left: 40%;
-  transform: translate(-50%, 0);
-  margin-top: 5px;
+    position: relative;
+    left: 40%;
+    transform: translate(-50%, 0);
+    margin-top: 5px;
 
+}
+
+.header-basket{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    padding: 10px 20px;
+    border-bottom: 1px solid;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .basket {
-  border: solid 2px;
-  margin-bottom: 110px;
-  position: fixed;
-  width: 70%;
-  height: 80%;
-  background: linear-gradient(bisque 65%, rgb(95, 67, 33) );
+    border: solid 2px;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 80%;
+    background: linear-gradient(bisque 65%, rgb(95, 67, 33) );
 }
 
 .close{
-  -webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+  	user-select: none;
+    height: 30px;
+    right: 0;
+}
+
+.basket-img{
+    border: 2px solid;
+    vertical-align: middle;
+    height: 65px;
+    width: 65px;
+}
+
+.basket-content{
+    margin-top: 70px;
+    border-bottom: 1px solid;
+}
+
+.basket-item{
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+
+.count{
+    height: 15px;
+}
+
+td{
+  width: 100%;
+}
+
+table{
+    width:100%;
+}
+
+tbody{
+    display: block;
+    overflow: auto;
+    height: calc(100vh - 250px);
+    font-size: 16px;
+}
+
+.basket-footer{
+    position: fixed;
+    left: 80%;
+    top: 95%;
+    transform: translate(-50%, -50%);
+    text-align: right;
+    padding-right: 30px;
+    padding-top: 5px;
+}
+
+.image-row{
+  display: inline-table;
+  width: 65px;
+}
+
+.indent-row{
+  padding-right: 40px;
+}
+
+.count-row{
+  text-align: center;
+}
+
+.count-value{
+  width: 40px;
   height: 30px;
-  position: absolute;
-  right: 0;
-  margin: 10px;
+  text-align: center;
+}
+
+.sum{
+  text-align: right;
+  padding-right: 15px;
+}
+
+.title-row{
+  padding-left: 15px;
 }
